--- a/index.html
+++ b/index.html
@@ -4,83 +4,81 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Markdown Converter</title>
+    <title>Simple Calculator</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/styles/github.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <style>
         body {
-            padding: 20px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            background-color: #f8f9fa;
         }
-        #loading {
-            display: none;
+        #output {
+            margin-top: 20px;
+            font-size: 1.5rem;
+            font-weight: bold;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Markdown to HTML Converter</h1>
-        <div id="loading" class="alert alert-info">Processing...</div>
-        <div id="markdown-output" class="mt-4"></div>
-        <hr>
-        <h2>Upload Your Markdown File</h2>
-        <input type="file" id="file-input" class="form-control" accept=".md">
-        <button id="convert-button" class="btn btn-primary mt-2">Convert</button>
+        <h1>Simple Calculator</h1>
+        <div class="mb-3">
+            <input type="number" id="num1" class="form-control" placeholder="Enter first number" required>
+        </div>
+        <div class="mb-3">
+            <input type="number" id="num2" class="form-control" placeholder="Enter second number" required>
+        </div>
+        <div class="mb-3">
+            <select id="operation" class="form-select">
+                <option value="add">Add</option>
+                <option value="subtract">Subtract</option>
+                <option value="multiply">Multiply</option>
+                <option value="divide">Divide</option>
+            </select>
+        </div>
+        <button id="calculate" class="btn btn-primary">Calculate</button>
+        <div id="output"></div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/highlight.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
     <script>
-        document.addEventListener("DOMContentLoaded", function() {
-            const outputDiv = document.getElementById("markdown-output");
-            const loadingDiv = document.getElementById("loading");
+        document.getElementById('calculate').addEventListener('click', function() {
+            const num1 = parseFloat(document.getElementById('num1').value);
+            const num2 = parseFloat(document.getElementById('num2').value);
+            const operation = document.getElementById('operation').value;
+            let result;
 
-            // Function to fetch and convert markdown file
-            function fetchMarkdown() {
-                loadingDiv.style.display = "block";
-                fetch('input.md')
-                    .then(response => {
-                        if (!response.ok) throw new Error('Network response was not ok');
-                        return response.text();
-                    })
-                    .then(markdownText => {
-                        const html = marked.parse(markdownText);
-                        outputDiv.innerHTML = html;
-                        hljs.highlightAll();
-                    })
-                    .catch(error => {
-                        outputDiv.innerHTML = `<div class="alert alert-danger">Error: ${error.message}</div>`;
-                    })
-                    .finally(() => {
-                        loadingDiv.style.display = "none";
-                    });
+            if (isNaN(num1) || isNaN(num2)) {
+                document.getElementById('output').innerText = 'Please enter valid numbers.';
+                return;
             }
 
-            // Function to handle file upload
-            document.getElementById("convert-button").addEventListener("click", function() {
-                const fileInput = document.getElementById("file-input");
-                const file = fileInput.files[0];
-                if (file) {
-                    loadingDiv.style.display = "block";
-                    const reader = new FileReader();
-                    reader.onload = function(e) {
-                        const markdownText = e.target.result;
-                        const html = marked.parse(markdownText);
-                        outputDiv.innerHTML = html;
-                        hljs.highlightAll();
-                    };
-                    reader.onerror = function() {
-                        outputDiv.innerHTML = `<div class="alert alert-danger">Error reading file.</div>`;
-                    };
-                    reader.readAsText(file);
-                } else {
-                    outputDiv.innerHTML = `<div class="alert alert-warning">Please select a markdown file.</div>`;
-                }
-            });
+            switch (operation) {
+                case 'add':
+                    result = num1 + num2;
+                    break;
+                case 'subtract':
+                    result = num1 - num2;
+                    break;
+                case 'multiply':
+                    result = num1 * num2;
+                    break;
+                case 'divide':
+                    if (num2 === 0) {
+                        document.getElementById('output').innerText = 'Cannot divide by zero.';
+                        return;
+                    }
+                    result = num1 / num2;
+                    break;
+                default:
+                    document.getElementById('output').innerText = 'Invalid operation.';
+                    return;
+            }
 
-            // Fetch the default markdown file on page load
-            fetchMarkdown();
+            document.getElementById('output').innerText = `Result: ${result}`;
         });
     </script>
 </body>
